<resources>
    <string name="app_name">Criminal Intent</string>
    <string name="crime_title_hint">Enter a title for the crime.</string>
    <string name="crime_title_label">Title</string>
    <string name="crime_details_label">Details</string>
    <string name="crime_solved_label">Solved</string>

    <string name="crime_photo_button_description">Take photo of crime scene</string>
    <string name="crime_photo_no_image_description">
Crime scene photo (not set)
</string>
    <string name="crime_photo_image_description">Crime scene photo (set)</string>

    <string name="date_picker_title">Date of crime:</string>
    <string name="deletion">Delete</string>
    <string name="crime_suspect_text">Choose suspect</string>
    <string name="crime_report_text">Send crime report</string>
    <string name="crime_call_text">Call the suspect</string>
    <string name="police_call">Police</string>
    <string name="requre_police_text">Require police</string>

    <string name="new_crime">New Crime</string>
    <string name="show_subtitle">Show Subtitle</string>
    <string name="hide_subtitle">Hide Subtitle</string>
    <string name="empty_list_notify">List is empty</string>
    <plurals name="subtitle_plural">
        <item quantity="one">%1$d crime</item>
        <item quantity="other">%1$d crime</item>
    </plurals>


    <string name="crime_report">
        %1$s!
        The crime was discovered on %2$s. %3$s, and %4$s
    </string>
    <string name="crime_report_solved">The case is solved</string>
    <string name="crime_report_unsolved">The case is not solved</string>
    <string name="crime_report_no_suspect">there is no suspect</string>
    <string name="crime_report_suspect">the suspect is %s.</string>
    <string name="crime_report_subject">CriminalIntent Crime Report</string>
    <string name="send_report">Send crime report via</string>
</resources>